--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </div>
             <div class="profile-picture">
-                <img src="avatar.JPG" alt="Vũ Đức Giang">
+                <img src="./avatar.jpg" alt="Vũ Đức Giang">
             </div>
         </header>
         <section>
